feat: Melhorando aspectos de desenvolvimento do backend
