# backend/src/resources/tecnologia/tecnologia.controller.ts
@@ -1,18 +1,18 @@
 import { Request, Response } from "express";
 import { ReasonPhrases, StatusCodes } from "http-status-codes";
-import { ProjetoService } from "./projeto.service";
-import { CreateProjetoDto, UpdateProjetoDto } from "./projeto.type";
+import { TecnologiaService } from "./tecnologia.service";
+import { CreateTecnologiaDto, UpdateTecnologiaDto } from "./tecnologia.type";
 
-const projetoService = new ProjetoService();
+const tecnologiaService = new TecnologiaService();
 
 const index = async (req: Request, res: Response) => {
     /*
-    #swagger.summary = 'Recupera os dados de todos os projetos.'
+    #swagger.summary = 'Recupera os dados de todos as tecnologias.'
     */
     const skip = req.query.skip ? parseInt(req.query.skip?.toString()) : undefined;
     const take = req.query.take ? parseInt(req.query.take?.toString()) : undefined;
     try {
-        const produtos = await projetoService.list(skip, take);
+        const produtos = await tecnologiaService.list(skip, take);
         res.status(StatusCodes.OK).json(produtos);
     } catch(err) {
         res.status(StatusCodes.INTERNAL_SERVER_ERROR).json(err);
@@ -21,20 +21,20 @@ const index = async (req: Request, res: Response) => {
 
 const create = async (req: Request, res: Response) => {
     /*
-    #swagger.summary = 'Adiciona um novo projeto.'
+    #swagger.summary = 'Adiciona uma nova tecnologia.'
     #swagger.parameters['body'] = {
         in: 'body',
-        schema: { $ref: '#/definitions/CreateProjetoDto' }
+        schema: { $ref: '#/definitions/CreateTecnologiaDto' }
     }
     #swagger.responses[200] = {
-        schema: { $ref: '#/definitions/Projeto' }
+        schema: { $ref: '#/definitions/Tecnologia' }
     } 
     */
 
-    const projeto = req.body as CreateProjetoDto;
+    const tecnologia = req.body as CreateTecnologiaDto;
     try {
-        const novoProjeto = await projetoService.create(projeto);
-        res.status(StatusCodes.CREATED).json(novoProjeto);
+        const novoTecnologia = await tecnologiaService.create(tecnologia);
+        res.status(StatusCodes.CREATED).json(novoTecnologia);
     } catch (err){
         res.status(StatusCodes.INTERNAL_SERVER_ERROR).json(err);
     }
@@ -42,18 +42,18 @@ const create = async (req: Request, res: Response) => {
 
 const update = async (req: Request, res: Response) => {
     /*
-    #swagger.summary = 'Atualiza dados de um projeto específico.'
-    #swagger.parameters['id'] = { description: 'ID do projeto' }
+    #swagger.summary = 'Atualiza dados de uma tecnologia específica.'
+    #swagger.parameters['id'] = { description: 'ID da tecnologia' }
     #swagger.parameters['body'] = {
         in: 'body',
-        schema: { $ref: '#/definitions/UpdateProjetoDto' }
+        schema: { $ref: '#/definitions/UpdateTecnologiaDto' }
     }
     */
     const { id } = req.params;
-    const projeto = req.body as UpdateProjetoDto;
+    const tecnologia = req.body as UpdateTecnologiaDto;
     try {
-        const updatedProjeto = await projetoService.update(id, projeto);
-        res.status(StatusCodes.NO_CONTENT).json(updatedProjeto);
+        const updatedTecnologia = await tecnologiaService.update(id, tecnologia);
+        res.status(StatusCodes.NO_CONTENT).json(updatedTecnologia);
     } catch (err) {
         res.status(StatusCodes.INTERNAL_SERVER_ERROR).json(err);
     } 
@@ -61,19 +61,19 @@ const update = async (req: Request, res: Response) => {
 
 const read = async (req: Request, res: Response) => {
     /*
-    #swagger.summary = 'Recupera um projeto específico.'
-    #swagger.parameters['id'] = { description: 'ID do projeto' }
+    #swagger.summary = 'Recupera uma tecnologia específica.'
+    #swagger.parameters['id'] = { description: 'ID da tecnologia' }
     #swagger.responses[200] = {
-        schema: { $ref: '#/definitions/Projeto' }
+        schema: { $ref: '#/definitions/Tecnologia' }
     }
     */
     const { id } = req.params;
     try {
-        const projeto = await projetoService.read(id);
-        if(!projeto){
+        const tecnologia = await tecnologiaService.read(id);
+        if(!tecnologia){
             res.status(StatusCodes.NOT_FOUND).json(ReasonPhrases.NOT_FOUND)
         }else{
-            res.status(StatusCodes.OK).json(projeto);
+            res.status(StatusCodes.OK).json(tecnologia);
         }
     } catch (err) {
         res.status(StatusCodes.INTERNAL_SERVER_ERROR).json(err);
@@ -82,16 +82,16 @@ const read = async (req: Request, res: Response) => {
 
 const remove = async (req: Request, res: Response) => {
     /*
-    #swagger.summary = 'Torna um projeto inativo.'
-    #swagger.parameters['id'] = { description: 'ID do projeto' }
+    #swagger.summary = 'Torna uma tecnologia inativa.'
+    #swagger.parameters['id'] = { description: 'ID da tecnologia' }
     */
     const { id } = req.params;
     try {
-        const deletedProjeto = await projetoService.delete(id);
-        if(!deletedProjeto){
+        const deletedTecnologia = await tecnologiaService.delete(id);
+        if (!deletedTecnologia){
             res.status(StatusCodes.NOT_FOUND).json(ReasonPhrases.NOT_FOUND)
         }else{
-            res.status(StatusCodes.NO_CONTENT).json(deletedProjeto);
+            res.status(StatusCodes.NO_CONTENT).json(deletedTecnologia);
         }
     } catch (err) {
         res.status(StatusCodes.INTERNAL_SERVER_ERROR).json(err);
