# backend/src/resources/tecnologia/tecnologia.type.ts
@@ -1,0 +1,9 @@
+import { Tecnologia } from "@prisma/client";
+
+export type CreateTecnologiaDto = Pick<Tecnologia, "nome"> & {
+    versao?: string;
+};
+
+export type UpdateTecnologiaDto = Pick<Tecnologia, "nome"> & {
+    versao?: string;
+};
